--- a/app/src/main/res/drawable/backcolor2.xml
+++ b/app/src/main/res/drawable/backcolor2.xml
@@ -1,10 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <gradient
+        android:angle="270"
         android:type="linear"
-        android:centerX="5%"
-        android:centerY="5%"
-        android:startColor="#FFFFFFFF"
-        android:centerColor="#FFFFFFFF"
-        android:endColor="#FF05C1FF"
+        android:startColor="#164574"
+        android:endColor="#F9EF84"
        />
 </shape>
