--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -27,7 +27,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_below="@id/appbarlayout"
-    android:background="@drawable/back9"
+    android:background="@drawable/backcolor2"
     >
         <LinearLayout
             android:layout_width="match_parent"
