--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -4,7 +4,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@drawable/back9"
     >
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
@@ -25,7 +24,7 @@
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/back9"
+    android:background="@drawable/backcolor2"
     >
     <LinearLayout
         android:layout_width="match_parent"
