--- a/app/src/main/res/layout/activity_new_task.xml
+++ b/app/src/main/res/layout/activity_new_task.xml
@@ -96,7 +96,11 @@
 
     </RelativeLayout>
 
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_below="@+id/relativelayout"
+    android:background="@drawable/backcolor2"
+    android:layout_height="match_parent">
 <android.support.v7.widget.RecyclerView
 
     android:layout_marginTop="40dp"
@@ -105,11 +109,11 @@
     android:id="@+id/recycler_view"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-    android:layout_below="@+id/relativelayout"
+
     
 
     />
-
+</RelativeLayout>
 </RelativeLayout>
 
 
