--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -5,7 +5,8 @@
     android:id="@+id/content_navigation"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backcolor2"
+    android:onClick="dun"
+    android:background="@drawable/hello4"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="probeginners.whattodo.Navigation"
     tools:showIn="@layout/app_bar_navigation">
