--- a/app/src/main/res/drawable/mypattern.xml
+++ b/app/src/main/res/drawable/mypattern.xml
@@ -1,8 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <gradient
         android:type="linear"
-        android:endColor="#274C5E"
-        android:gradientRadius="300dp"
-        android:startColor="#447391"
-        />
+        android:centerX="96%"
+        android:startColor="#F2FFFFFF"
+        android:centerColor="#FC2B72FF"
+        android:endColor="#FF2B72FF"
+        android:angle="270"/>
 </shape>
