--- a/app/src/main/res/drawable/backcolor.xml
+++ b/app/src/main/res/drawable/backcolor.xml
@@ -1,10 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <gradient
-        android:type="radial"
-        android:centerX="50%"
-        android:centerY="50%"
-        android:startColor="#FF000000"
-        android:centerColor="#FF000000"
-        android:endColor="#FF000000"
-        android:gradientRadius="30"/>
+        android:type="linear"
+        android:startColor="#FFFFFF"
+        android:endColor="#FFFFFF"
+        />
 </shape>
