--- a/app/src/main/res/layout/welcome_slide1.xml
+++ b/app/src/main/res/layout/welcome_slide1.xml
@@ -12,9 +12,9 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="@dimen/img_width_height"
+            android:layout_width="213dp"
             android:layout_height="@dimen/img_width_height"
-            android:src="@drawable/happy" />
+            android:src="@drawable/minionparty" />
 
         <TextView
             android:layout_width="wrap_content"
