--- a/app/src/main/res/layout/welcome_slide2.xml
+++ b/app/src/main/res/layout/welcome_slide2.xml
@@ -12,9 +12,9 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="@dimen/img_width_height"
-            android:layout_height="@dimen/img_width_height"
-            android:src="@drawable/alarmclock" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/alarmclockmin" />
 
         <TextView
             android:layout_width="wrap_content"
