--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -198,7 +198,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Change Backgorund Image"
+                android:text="Change Background Image"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
             <TextView
