--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -6,8 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:onClick="dun"
+    android:layout_below="@id/toolbar"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="probeginners.whattodo.Navigation"
+    android:layout_above="@+id/speak"
     tools:showIn="@layout/app_bar_navigation">
 
 
