--- a/app/src/main/res/layout/newlistcontent.xml
+++ b/app/src/main/res/layout/newlistcontent.xml
@@ -40,5 +40,14 @@
     android:layout_marginTop="10dp"
     />
 
-
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id">
+    </com.google.android.gms.ads.AdView>
     </RelativeLayout>
