--- a/app/src/main/res/layout/newlistcontent.xml
+++ b/app/src/main/res/layout/newlistcontent.xml
@@ -23,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:hint="List Name"
+            android:inputType="textCapSentences"
             android:singleLine="true"
             android:id="@+id/newtaskname"
             />
