--- a/app/src/main/res/layout/mycard.xml
+++ b/app/src/main/res/layout/mycard.xml
@@ -97,9 +97,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:src="@drawable/dots"
-                android:layout_gravity="center"
-                android:id="@+id/imageView2"
-                 />
+                android:layout_gravity="center" />
             </LinearLayout>
 
         </LinearLayout>
