--- a/app/src/main/res/layout/newlistcontent.xml
+++ b/app/src/main/res/layout/newlistcontent.xml
@@ -1,53 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_new_list"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:showIn="@layout/activity_new_list"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="probeginners.whattodo.NewList"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    tools:showIn="@layout/activity_new_list">
 
 
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/abcd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
 
-        android:id="@+id/abcd"
+        android:background="@color/white"
         >
 
         <EditText
+            android:id="@+id/newtaskname"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:hint="List Name"
             android:inputType="textCapSentences"
-            android:singleLine="true"
-            android:id="@+id/newtaskname"
+            android:maxLines="1"
             />
     </android.support.design.widget.TextInputLayout>
 
 <ImageView
     android:layout_width="300dp"
     android:layout_height="300dp"
-    android:src="@drawable/grocery"
-    android:id="@+id/abcd2"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:layout_marginTop="10dp"
+    android:src="@drawable/grocery"
     />
 
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         ads:adSize="BANNER"
         ads:adUnitId="@string/banner_ad_unit_id">
     </com.google.android.gms.ads.AdView>
